fixed the bug with the prize pool, user wagers and leaderboard not showing when user is not logged in

--- a/src/app/styles/app.css
+++ b/src/app/styles/app.css
@@ -360,3 +360,21 @@ tw-w-screen tw-px-4 md:tw-px-16 tw-pt-8 md:tw-pt-16 2xl:tw-w-[1440px] */
 .live-page-shadow {
   box-shadow: 0px 8px 8px 0px #0000001F;
 }
+
+.section-one {
+	background: linear-gradient(-45deg, #b91f6c,#2b3b6c,#1a2c3d);
+	background-size: 400% 400%;
+	animation: gradient 5s ease infinite;
+}
+
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
